--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite --mode development",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "build:staging": "vite build --mode staging",
     "build:prod": "vite build --mode production",
     "preview:staging": "vite preview --mode staging",
-    "preview:prod": "vite preview --mode production"
+    "preview:prod": "vite preview --mode production",
+    "start": "node server.js"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@supabase/supabase-js": "^2.46.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.8",
+    "express": "^4.21.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -30,6 +32,7 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
+    "terser": "^5.24.0",
     "typescript": "~5.1.6",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
