--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "build:prod": "vite build --mode production",
     "preview:staging": "vite preview --mode staging",
     "preview:prod": "vite preview --mode production",
-    "start": "node server.js"
+    "start": "node server.js",
+    "vercel-build": "vite build"
   },
   "dependencies": {
+    "element-plus": "^2.3.8",
     "@element-plus/icons-vue": "^2.1.0",
     "@supabase/supabase-js": "^2.46.1",
     "core-js": "^3.8.3",
-    "element-plus": "^2.3.8",
     "express": "^4.21.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
