--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@supabase/supabase-js": "^2.46.1",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.3.8",
     "express": "^4.21.1",
     "pinia": "^2.1.6",
